--- a/Week 1/Day 4/Landing Page/styles/scss/partials/_header.scss
+++ b/Week 1/Day 4/Landing Page/styles/scss/partials/_header.scss
@@ -9,11 +9,14 @@
 
     a {
       color: $white;
+      font-size: $font-size-large;
+      font-weight: $font-weight-bold;
     }
   }
 
   &__nav {
     display: none;
+    transform: translate(0, 10px);
 
     &-activeIndicator {
       display: flex;
@@ -32,6 +35,7 @@
         align-items: center;
         list-style: none;
         gap: $gap-large;
+        margin: 0;
       }
 
       a:hover,
